<resources>
    <string name="app_name">My Application new</string>
    <string name="number_guessing_game">Number Guessing Game</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account"><u>Create an account</u></string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="show">Show</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_3_10_characters_long">Username (3–10 characters long)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="security_question_what_is_your_home_town">Security Question: What is your home town?</string>
    <string name="answer">Answer</string>
    <string name="security_question_what_is_the_name_of_your_favourite_teacher">Security Question: What is the name of your favourite teacher?</string>
    <string name="security_question_what_is_your_favourite_food">Security Question: What is your favourite food?</string>
    <string name="create">Create</string>
    <string name="password_7_15_characters_long">Password (7–15 characters long)</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="continueText">Continue</string>
    <string name="security_questions">Security Questions</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="new_password">New password</string>
    <string name="reset">Reset</string>
    <string name="new_password_7_15_characters_long">New password (7-15 characters long)</string>
    <string name="password_changed">Password Changed!</string>
    <string name="your_password_has_been_reset_successfully">Your password has been reset successfully.</string>
    <string name="account_created">Account Created!</string>
    <string name="your_account_has_been_created_successfully">Your account has been created successfully.</string>
    <string name="what_is_your_mother_s_maiden_name">Security Question: What is your mother\'s maiden name?</string>
    <string name="log_out"><u>Log out</u></string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="difficulty">Difficulty</string>
    <string name="how_to_play">How to play</string>
    <string name="view_leaderboard">View leaderboard</string>
    <string name="instructions">Instructions</string>
    <string name="welcome_to_the_number_guessing_game_in_this_game_you_may_choose_between_the_difficulties_of_easy_medium_or_hard_and_in_each_of_them_a_random_number_will_be_generated_from_a_given_range_in_the_more_challenging_modes_the_range_will_be_bigger_the_point_of_the_game_is_to_attempt_to_figure_out_the_generated_number_in_a_limited_amount_of_guesses_good_luck">Welcome to The Number Guessing Game. In this game, you may choose between the difficulties of easy, medium, or hard, and in each of them, a random number will be generated from a given range. In the more challenging modes, the range will be bigger. The point of the game is to attempt to figure out the generated number in a limited amount of guesses. Good luck!</string>
    <string name="range_1_10">Range: 1-10</string>
    <string name="guess">Guess</string>
    <string name="enter">Enter</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_again">Play again</string>
    <string name="range_1_100">Range: 1-100</string>
    <string name="range_1_1000">Range: 1-1000</string>
    <string name="leaderboard_easy">Leaderboard (Easy)</string>
    <string name="leaderboard_medium">Leaderboard (Medium)</string>
    <string name="leaderboard_hard">Leaderboard (Hard)</string>
    <string name="reset_scores">Reset scores</string>
    <string name="account_scores_reset">Account scores reset!</string>
    <string name="all_scores_on_your_account_have_been_successfully_reset">All scores on your account have been successfully reset.</string>
    <string name="your_account_s_scores_have_been_successfully_reset">Your account\'s scores have been successfully reset.</string>
</resources>