<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.numberguessinggame.ResetPasswordPage"
    android:paddingHorizontal="12dp"
    android:paddingBottom="24dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/navigation_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="24dp" >

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="?attr/homeAsUpIndicator" />

    </RelativeLayout>

    <TextView
        android:id="@+id/resetPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:text="@string/reset_your_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="72dp"
        android:text="@string/new_password_7_15_characters_long" />

    <EditText
        android:id="@+id/resetPasswordBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/black_border"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/confirmPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm_password"/>

    <EditText
        android:id="@+id/confirmPasswordBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/black_border"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="36dp"/>

</LinearLayout>
</ScrollView>