<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountPage"
    android:paddingHorizontal="12dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <RelativeLayout
        android:id="@+id/navigation_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="?attr/homeAsUpIndicator"
            android:background="?attr/selectableItemBackgroundBorderless"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/createUsernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigation_header"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/createUsernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/username_3_10_characters_long"
        app:layout_constraintBottom_toTopOf="@+id/createUsernameBox"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/createUsernameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/black_border"
        android:hint="@string/username"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/createPasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/password_7_15_characters_long"
        app:layout_constraintBottom_toTopOf="@+id/createPasswordBox"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/createPasswordBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/black_border"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/confirmPasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/confirmPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordBox"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirmPasswordBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/black_border"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/securityQuestion1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/securityQuestion1Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/security_question_what_is_your_home_town"
        app:layout_constraintBottom_toTopOf="@+id/securityQuestion1Box"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/securityQuestion1Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/black_border"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/answer"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/securityQuestion2Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/securityQuestion2Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/what_is_your_mother_s_maiden_name"
        app:layout_constraintBottom_toTopOf="@+id/securityQuestion2Box"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/securityQuestion2Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/black_border"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/answer"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/securityQuestion3Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/securityQuestion3Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/security_question_what_is_your_favourite_food"
        app:layout_constraintBottom_toTopOf="@+id/securityQuestion3Box"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/securityQuestion3Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/black_border"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/answer"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>