<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.numberguessinggame.SecurityQuestionPage"
        android:paddingHorizontal="12dp"
        android:paddingBottom="24dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/navigation_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="24dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="?attr/homeAsUpIndicator" />

        </RelativeLayout>

        <TextView
            android:id="@+id/securityQuestionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="@string/security_questions"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/securityQuestion1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/security_question_what_is_your_home_town" />

        <EditText
            android:id="@+id/securityQuestion1Box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/black_border"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/answer"
            android:padding="10dp" />

        <TextView
            android:id="@+id/securityQuestion2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:text="@string/what_is_your_mother_s_maiden_name" />

        <EditText
            android:id="@+id/securityQuestion2Box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/black_border"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/answer"
            android:padding="10dp" />

        <TextView
            android:id="@+id/securityQuestion3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:text="@string/security_question_what_is_your_favourite_food" />

        <EditText
            android:id="@+id/securityQuestion3Box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/black_border"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/answer"
            android:padding="10dp" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/continueText"/>
    </LinearLayout>
</ScrollView>