<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MediumPage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/logoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:ellipsize="end"
            android:clickable="true"
            android:textColor="@color/black"
            android:focusable="true" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/numberOfAttemptsText"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="60dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp" />

            <TextView
                android:id="@+id/rangeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/range_1_100"
                android:layout_marginTop="96dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/guessBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/black_border"
                android:hint="@string/guess"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="3"
                android:layout_marginTop="24dp"
                android:padding="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:singleLine="true"
                android:textAlignment="center" />

            <Button
                android:id="@+id/enterButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_gravity="center"
                android:text="@string/enter" />

            <TextView
                android:id="@+id/adviceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/mainMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_menu"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>